web: Fix top menu alignment.
With this it again possible to select the sub-menu.  Don't known when
this regression started.  We should move to a simpler menu system.

--- a/web/share/site.css
+++ b/web/share/site.css
@@ -292,7 +292,7 @@ nav ul li:hover ul.sub-menu {
     z-index: 99;
     border-radius: 0px;
     position: absolute;
-    top: 28px;
+    /*top: 28px;*/
     left: 0;
 }
 nav ul ul li {
